--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,10 @@ on:
     tags:
       - "*"
 
+permissions:
+  contents: write
+  packages: write
+
 
 jobs:
   build:
@@ -28,7 +32,8 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Prefer a personal access token if provided in repo secrets, otherwise fall back to built-in token
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN || github.token }}
         with:
           tag_name: ${{ github.ref_name }}
           release_name: ${{ github.ref_name }}
@@ -37,7 +42,7 @@ jobs:
       - name: Upload release asset - main.js
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN || github.token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./main.js
@@ -47,7 +52,7 @@ jobs:
       - name: Upload release asset - manifest.json
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN || github.token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./manifest.json
@@ -57,9 +62,11 @@ jobs:
       - name: Upload release asset - styles.css
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN || github.token }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./styles.css
           asset_name: styles.css
           asset_content_type: text/css
+
+      # Note: zip packaging and debug steps have been removed to keep the workflow simple.
