feat(release): 添加插件打包功能并更新文档
新增了将 main.js、manifest.json 和 styles.css 打包成 zip 文件的功能，
并在 release workflow 中上传该 zip 包作为附加资产。同时更新了相关文档说明。

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,4 +69,20 @@ jobs:
           asset_name: styles.css
           asset_content_type: text/css
 
-      # Note: zip packaging and debug steps have been removed to keep the workflow simple.
+      - name: Ensure zip tool is installed
+        run: sudo apt-get update && sudo apt-get install -y zip
+
+      - name: Package plugin zip
+        run: zip -j obsidian-auto-tags-${{ github.ref_name }}.zip main.js manifest.json styles.css || true
+
+      - name: Upload release asset - plugin zip
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN || github.token }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./obsidian-auto-tags-${{ github.ref_name }}.zip
+          asset_name: obsidian-auto-tags-${{ github.ref_name }}.zip
+          asset_content_type: application/zip
+
+      # Minimal workflow: build and upload assets (main.js, manifest.json, styles.css + zip)
