--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-	"id": "obsidian-auto-tags",
-	"name": "auto tags",
+	"id": "auto-tags",
+	"name": "Auto Tags",
 	"version": "0.0.1",
 	"minAppVersion": "0.15.0",
 	"description": "分析并一键为笔记生成标签，提升笔记组织效率。\nAnalyze and tag your document with one click for efficient note organization using AI.",
